# FastChat

./: CMakeLists.txt  CODE_EXPLANATION.md  README.md
docs/: protocol.md
scripts/: build_win.ps1  run_gateway.ps1  run_server_bg.ps1
src/broker/: server.cpp
src/client/: client.cpp
src/common/: base64.h
web/: package-lock.json  package.json  server.js
web/public/: app.js  index.html  style.css
